[package]
name = "winstaller"
version = "0.0.0"
edition = "2021"
description = "Winstalls things."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.58"
mktemp = "0.4.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10.1"
