[package]
name = "winstaller"
version = "0.1.0"
edition = "2021"
description = "Installs Sugar CLI on Windows, and eventually maybe other things."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.58"
console = "0.15.0"
dialoguer = "0.10.1"
mktemp = "0.4.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10.1"
